--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,39 @@
-<footer>
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="ro">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test de Tastare</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="assets/books.png">
+    <style>
+        /* ===== Footer ===== */
+#footer-container {
+    background-color: #2c3e50;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    width: 100%;
+}
+
+    </style>
+</head>
+<body>
+
+   <footer>
     <p>&copy; 2024 Test de Tastare. Toate drepturile rezervate de catre <span id="myname"> " Pavlovschii Radion Olegovici " .</span></p>
 </footer>
+
+    
+</html>
+
+
+
+
