--- a/navbar.html
+++ b/navbar.html
@@ -1,9 +1,61 @@
-<nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="tips.html">Tips</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="history.html">History</a></li>
-        <li><a href="settings.html">Settings</a></li>
-    </ul>
-</nav>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Navbar</title>
+    <style>
+/* ===== NAVBAR  ===== */
+#navbar-container {
+    background-color: #34495e;
+    color: white;
+    padding: 15px 20px;
+    display: flex;
+    justify-content: center;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+}
+
+#navbar-container ul {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+}
+
+#navbar-container ul li {
+    display: inline;
+}
+
+#navbar-container ul li a {
+    text-decoration: none;
+    color: white;
+    font-size: 18px;
+    padding: 8px 15px;
+    transition: 0.3s;
+    border-radius: 5px;
+}
+
+#navbar-container ul li a:hover {
+    background-color: #5c6bc0;
+    color: #f2f2f2;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
+}
+      
+    </style>
+</head>
+<body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tips.html">Tips</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="history.html">History</a></li>
+            <li><a href="settings.html">Settings</a></li>
+        </ul>
+    </nav>
+</body>
+</html>
