--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <textarea id="input-text" placeholder="Tastează aici..." rows="5"></textarea>
             
             <div id="controls">
-                <div id="timer">⏱️ Timp: 0s</div>
+                <div id="timer">⏱️ Timp: 60s</div>
                 <button id="start-button" class="btn-style">Start</button>
                 <button id="restart-button" class="btn-style">Restart</button>
                 <div id="words-per-minute">🚀 Viteză: 0 WPM</div>
@@ -42,7 +42,7 @@
     <!-- Footer -->
     <div id="footer-container"></div>
 
-    <script src="js/load-components.js"></script>\
+    <script src="js/load-components.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
