add localstorage and histry page for dislay information

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
 
         <section id="test">
-            <div id="text-to-type">Programarea este arta de a comunica cu un computer. Încearcă să tastezi acest text fără erori și cât mai rapid posibil!</div>
+            <div id="text-to-type">...</div>
             <textarea id="input-text" placeholder="Tastează aici..." rows="5"></textarea>
             
             <div id="controls">
