--- a/footer.html
+++ b/footer.html
@@ -15,12 +15,15 @@
     <link rel="icon" href="assets/books.png">
     <style>
         /* ===== Footer ===== */
-#footer-container {
+        #footer-container {
     background-color: #2c3e50;
     color: white;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
     width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
 
     </style>
