--- a/navbar.html
+++ b/navbar.html
@@ -54,7 +54,7 @@
             <li><a href="tips.html">Tips</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="history.html">History</a></li>
-            <li><a href="settings.html">Settings</a></li>
+            <!-- <li><a href="settings.html">Settings</a></li> -->
         </ul>
     </nav>
 </body>
